--- a/FinalDocMan/App.config
+++ b/FinalDocMan/App.config
@@ -21,7 +21,7 @@
   <system.serviceModel>
     <services>
       <service name="FinalDocMan.DocService">
-        <endpoint address="http://localhost:8080/FinalDocMan" binding="basicHttpBinding"
+        <endpoint address="http://26.209.94.68:8080/FinalDocMan" binding="basicHttpBinding"
           bindingConfiguration="" name="DocManServiceEndPoint" contract="FDocmanInter.IDocService" />
       </service>
     </services>
